--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@maiar-ai/core": "^0.5.0",
     "@maiar-ai/memory-sqlite": "^0.5.0",
     "@maiar-ai/model-openai": "^0.5.0",
-    "@maiar-ai/plugin-express": "^0.5.0",
+    "@maiar-ai/plugin-express": "^0.6.0",
     "@maiar-ai/plugin-terminal": "^0.5.0",
     "@maiar-ai/plugin-text": "^0.5.0",
+    "@types/express": "^5.0.0",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "typescript": "^5.7.3"
   }
 }
